# go-brrr

./: .brrrignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  apply_bug_fixes.py  build.rs  design.md  design_2.md  rustc-ice-2026-01-17T08_26_02-3022143.txt
.cargo/: config.toml
benches/: ast_extraction.rs  ast_parsing.rs  callgraph.rs  e2e.rs  flow_analysis.rs  semantic.rs
benches/fixtures/: large_rust.rs  sample_cpp.cpp  sample_go.go  sample_java.java
brrr-cli/: Cargo.toml  README.md  build.rs
brrr-cli/benches/: ast_extraction.rs  callgraph.rs  e2e.rs  flow_analysis.rs  semantic.rs
brrr-cli/examples/: test_java.rs
brrr-cli/proto/: tei.proto
brrr-cli/src/: diagnostics.rs  error.rs  lib.rs  main.rs  simd.rs
brrr-cli/src/ast/: mod.rs  (+4 more)
brrr-cli/tests/: integration.rs
brrr-lang/: .gitignore  AXIOMS_REPORT_v2.md  LICENSE  Makefile  README.md  SPECIFICATION_ERRATA.md  agents_on_admits.txt  brrr_lang_spec_v0.4.tex  fstar_doc.md  fstar_pop_book.md
brrr-lang/scripts/: remove_fst_duplicate_types.py  reorder_fsti.py  verify_comments.py
brrr-lang/src/: Makefile
brrr-lang/tests/: BrrrTestBorrowChecker.fst  BrrrTestLattices.fst  BrrrTestSessionTypes.fst  BrrrTestTranslations.fst  TestBorrowChecker.fst  TestLattices.fst  TestSessionTypes.fst  TestTranslations.fst
brrr-lint/: Cargo.toml  README.md
brrr-lint/benches/: parser_bench.rs
brrr-lint/docs/: FST004_UNUSED_OPENS_SPEC.txt  FST016_VERIFICATION_PERFORMANCE_PROFILER_SPEC.txt
brrr-lint/src/: cli.rs  config.rs  connection.rs  document.rs  error.rs  lib.rs  lint_config.rs  main.rs  protocol.rs  server.rs
brrr-lint/src/lint/: comments.rs  dead_code.rs  doc_checker.rs  duplicate_types.rs  effect_checker.rs  engine.rs  file_safety.rs  fix_applicator.rs  fix_validator.rs  fstar_traps.rs  import_optimizer.rs  lowstar.rs  lsp.rs  mod.rs  module_deps.rs  naming.rs  output.rs  parser.rs  perf_profiler.rs  proof_hints.rs  refinement_simplifier.rs  reorder_interface.rs  revert.rs  rules.rs  security.rs  shared_patterns.rs  spec_extractor.rs  test_generator.rs  unused_opens.rs  z3_complexity.rs
brrr-lint/tests/fixtures/fstar_project/: DeadCode.fst  DuplicateTypes.fst  DuplicateTypes.fsti  InterfaceOrder.fst  InterfaceOrder.fsti  LargeFile.fst  MissingDocs.fst  RefinementTypes.fst  UnusedOpens.fst
brrr-lint/tests/integration/: cli_validation_tests.rs  fix_correctness_tests.rs  fix_safety_tests.rs  real_fstar_tests.rs
brrr-machine/: README.md  brrr_lang_spec.md  brrr_lang_spec_v0.4.tex  synthesis_appendices.tex  synthesis_combined.md  synthesis_part10.tex  synthesis_part11.tex  synthesis_part12.tex  synthesis_part13.tex  synthesis_part14.tex  synthesis_part2.tex  synthesis_part3.tex  synthesis_part5.tex  synthesis_part6.tex  synthesis_part7.tex  synthesis_part8.tex
brrr-machine/src/: Demo.fst  Makefile  README.md
brrr-machine/synthesis/: synthesis_appendices.tex  synthesis_combined.tex  synthesis_combined.toc  synthesis_part1.tex  synthesis_part11.tex  synthesis_part12.tex  synthesis_part14.tex  synthesis_part3.tex  synthesis_part4.tex  synthesis_part4a.tex  synthesis_part4b.tex  synthesis_part6.tex  synthesis_part7.tex  synthesis_part9.tex
brrr-repr/: Cargo.toml  README.md
brrr-repr/src/: api.rs  error.rs  lib.rs  modes.rs
brrr-repr/src/borrow/: checker.rs  error.rs  lifetime.rs  mod.rs  state.rs  types.rs
brrr-repr/src/boundary/: mod.rs
brrr-repr/src/coeffects/: mod.rs
brrr-repr/src/decl/: definitions.rs  mod.rs  module.rs
brrr-repr/src/effects/: free.rs  handler.rs  locations.rs  mod.rs  ops.rs  row.rs
brrr-repr/src/encoding/: binary.rs  hash.rs  intern.rs  interner.rs  mod.rs  sections.rs  text.rs  varint.rs
brrr-repr/src/expr/: expression.rs  literal.rs  location.rs  mod.rs  operators.rs  pattern.rs
brrr-repr/src/gradual/: elaborate.rs  mod.rs  types.rs
brrr-repr/src/inference/: coeffects.rs  effects.rs  infer.rs  mod.rs  modes.rs  regions.rs  resolve.rs  session.rs  types.rs
brrr-repr/src/pipeline/: mod.rs
brrr-repr/src/security/: annotations.rs  labels.rs  mod.rs  taint.rs
brrr-repr/src/session/: binary.rs  deadlock.rs  mod.rs  multiparty.rs  priority.rs
brrr-repr/src/tests/: integration.rs  mod.rs
brrr-repr/src/types/: brrr_type.rs  dependent.rs  func_type.rs  kind.rs  mod.rs  primitives.rs  region.rs  scheme.rs  struct_enum.rs  variance.rs
brrr-repr/src/verification/: contracts.rs  equality.rs  formula.rs  mod.rs  subst.rs  vc.rs
brrr-translate/: Cargo.toml
brrr-translate/src/: lib.rs  output.rs
brrr-translate/src/go/: concurrency.rs  context.rs  exprs.rs  mod.rs  stmts.rs  types.rs
data/: README.md
data/scripts/: init.sh
docs/design/: advanced_static_analysis.md  bundle-diff.md
examples/: test_java.rs
src/: diagnostics.rs  error.rs  lib.rs  main.rs  simd.rs
src/analysis/: invariants.rs  resource_flow.rs  state_machine.rs
src/ast/: constants.rs  extractor.rs  mod.rs  structure.rs  tree.rs  types.rs
src/callgraph/: arch.rs  cache.rs  dead.rs  impact.rs  indexer.rs  mod.rs  resolver.rs  scanner.rs  types.rs
src/cfg/: builder.rs  mod.rs  render.rs  types.rs
src/dataflow/: constant_propagation.rs  live_variables.rs  mod.rs  reaching_definitions.rs  very_busy_expressions.rs
src/dfg/: builder.rs  mod.rs  slice.rs  types.rs
src/embedding/: index.rs  mod.rs  tei_client.rs
src/lang/: c.rs  cpp.rs  go.rs  java.rs  mod.rs  python.rs  registry.rs  rust_lang.rs  traits.rs  typescript.rs
src/metrics/: cohesion.rs  coupling.rs  function_size.rs  loc.rs  mod.rs  nesting.rs  unified.rs
src/patterns/: design_patterns.rs  mod.rs
src/pdg/: builder.rs  mod.rs
src/quality/: circular.rs  doc_coverage.rs  mod.rs  test_quality.rs
src/security/: crypto.rs  deserialization.rs  input_validation.rs  mod.rs  prototype_pollution.rs  redos.rs  sarif.rs  secrets.rs  types.rs
src/semantic/: chunker.rs  extractor.rs  mod.rs  types.rs
src/util/: ignore.rs  mod.rs  path.rs  query_error.rs  simd.rs
tests/integration/: analysis_tests.rs  coverage_tests.rs  dataflow_tests.rs  metrics_tests.rs  quality_tests.rs  security_tests.rs
(+383 files in other folders)
