# =============================================================================
# BRRR Workspace
# =============================================================================
# Crates.io Publishing Order:
#   1. cargo publish -p brrr-repr   (IR types, no internal deps)
#   2. cargo publish -p brrr        (CLI tool, depends on brrr-repr)
# =============================================================================

[workspace]
members = [
    "brrr-cli",
    "brrr-repr",
    "brrr-translate",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/GrigoryEvko/go-brrr"
rust-version = "1.70"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# String interning
lasso = { version = "0.7", features = ["multi-threaded", "ahasher", "serialize"] }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Testing
pretty_assertions = "1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.release-crate]
inherits = "release"
lto = "fat"
strip = true
panic = "abort"
