[package]
name = "brrr-repr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = "Binary and text representation formats for brrr-lang IR"
authors = ["Grigory Evko <grigory@evko.io>"]
documentation = "https://docs.rs/brrr-repr"
readme = "README.md"
keywords = ["ir", "serialization", "brrr", "encoding", "type-system"]
categories = ["encoding", "data-structures", "development-tools"]

exclude = [
    ".git",
    ".github",
    "target",
    "*.brrr",
    "*.brrrx",
]

[dependencies]
# Serialization
serde.workspace = true

# String interning - 4-byte Spur keys
lasso.workspace = true

# SIMD-accelerated hashing (xxh3) for content addressing
xxhash-rust.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints.rust]
unsafe_code = "warn"
missing_docs = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
