[package]
name = "brrr-translate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Translation layer from source languages to Brrr IR"

[dependencies]
# Core IR types
brrr-repr = { version = "0.1.0", path = "../brrr-repr" }

# Tree-sitter for AST parsing
tree-sitter = "0.26"
tree-sitter-go = "0.25"

# String interning
lasso = { version = "0.7", features = ["multi-threaded", "ahasher"] }

# High-performance hash maps
rustc-hash = "2"

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"

[lints.rust]
unsafe_code = "warn"
missing_docs = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
